First updation of the .qmd file
Updated QMD file with a small comment

--- a/24217873_HW1.qmd
+++ b/24217873_HW1.qmd
@@ -19,6 +19,10 @@ execute:
   warning: false
 ---
 
+# Updated for GitHub - Homework 2
+
+- First updation in .qmd
+
 ```{r setup, include=FALSE, message=FALSE, warning=FALSE}
 # Load required libraries
 library(palmerpenguins)
@@ -27,16 +31,15 @@ library(ggplot2)
 
 # Introduction: Penguin Species and Their Physical Traits
 
-The **Palmer Penguins** dataset provides size measurements for three penguin species: \textcolor{red}{Adelie, Chinstrap and Gentoo} living in the Palmer Archipelago, Antarctica. It includes data on features like bill dimensions, flipper length and body mass, along with the species and island of each observation.
-This report uses a scatter plot to examine how bill length and bill depth vary by species. These features are often used to distinguish between penguin types.
+The **Palmer Penguins** dataset provides size measurements for three penguin species: \textcolor{red}{Adelie, Chinstrap and Gentoo} living in the Palmer Archipelago, Antarctica. It includes data on features like bill dimensions, flipper length and body mass, along with the species and island of each observation. This report uses a scatter plot to examine how bill length and bill depth vary by species. These features are often used to distinguish between penguin types.
 
 # Dataset Summary
 
 Variables:
 
-- `bill_length_mm`: Bill length in millimeters
-- `bill_depth_mm`: Bill depth in millimeters
-- `species`: Penguin species (*Adelie, Chinstrap, Gentoo*)
+-   `bill_length_mm`: Bill length in millimeters
+-   `bill_depth_mm`: Bill depth in millimeters
+-   `species`: Penguin species (*Adelie, Chinstrap, Gentoo*)
 
 ```{r}
 # Summary of dataset
@@ -58,17 +61,18 @@ ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm, color = species)) +
   theme_minimal()
 ```
 
-# Description of the plot 
+# Description of the plot
 
 This scatter plot shows clear differences in bill dimensions among species:
 
-- Adelie penguins have shorter, deeper bills.
+-   Adelie penguins have shorter, deeper bills.
 
-- Gentoo penguins have longer, shallower bills.
+-   Gentoo penguins have longer, shallower bills.
 
-- Chinstrap penguins fall in between.
+-   Chinstrap penguins fall in between.
 
 This separation makes bill measurements a useful tool for distinguishing species.
 
 # Conclusion
+
 The plot clearly demonstrates how bill dimensions can effectively distinguish penguin species, making these features useful in classification models or ecological field studies.
