Second updation of the .qmd file
Updated QMD file with a small comment

--- a/24217873_HW1.qmd
+++ b/24217873_HW1.qmd
@@ -22,6 +22,7 @@ execute:
 # Updated for GitHub - Homework 2
 
 - First updation in .qmd
+- Second updation in .qmd
 
 ```{r setup, include=FALSE, message=FALSE, warning=FALSE}
 # Load required libraries
