Third updation of the .qmd file
Updated QMD file with a small change in text

--- a/24217873_HW1.qmd
+++ b/24217873_HW1.qmd
@@ -19,7 +19,7 @@ execute:
   warning: false
 ---
 
-# Updated for GitHub - Homework 2
+# Updated for GitHub - Homework
 
 - First updation in .qmd
 - Second updation in .qmd
